<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_live_channels"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_live_channels" />
        <item
            android:id="@+id/nav_video_on_demand"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_video_on_demand" />
        <item
            android:id="@+id/nav_education"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_education" />
    </group>

    <item android:title="@string/menu_my_section">
        <menu>
            <item
                android:id="@+id/nav_my_favourite"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_my_favourite" />
            <item
                android:id="@+id/nav_recent_view"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_recent_view" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_manage" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>